updates to quest lp

--- a/questgames/src/assets/scss/components/hero.scss
+++ b/questgames/src/assets/scss/components/hero.scss
@@ -31,7 +31,7 @@
         }
     }
     &__cta {
-        @extend .margin-center;
+        margin: 0 auto;
         @include _breakpoint_md {
             margin: 0;
         }
@@ -46,10 +46,9 @@
             margin-bottom: 12px;
             font-size: 18px;
             font-weight: 600;
-            color: $text-gold;
+            color: $text-grey;
             opacity: 0.65;
             text-align: right;
-            border-bottom: 1px solid;
             @include _breakpoint_md {
                 font-size: 24px;
             }
@@ -62,7 +61,7 @@
             align-self: flex-end;
             background: linear-gradient(180deg, rgba(33, 32, 32, 0.85) 0%, rgba(31, 29, 29, 0.1) 100%);
             box-shadow: inset 34px 31px 127px 14px rgba(0, 0, 0, 0.75);
-            color: $text-gold;
+            color: $text-grey;
             padding: 16px;
             border-bottom-left-radius: 16px;
             border-bottom-right-radius: 16px;
@@ -76,6 +75,7 @@
                 display: flex;
                 justify-content: flex-end;
                 gap: 8px;
+                color: $orange-100;
                 .game-property {
                     border-right: 1px solid;
                     padding-right: 8px;
@@ -103,13 +103,10 @@
         border-radius: 16px;
         filter: grayscale(80%);
         animation-duration: 6s;
-        //transition: all 2s;
         animation-name: fadeIn;
         animation-fill-mode: forwards;
         animation-delay: 1.2s;
         animation-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
-        //filter: drop-shadow(16px 16px 56px #f2890f);
-        //box-shadow: 6px 16px 56px #f2890f;
         opacity: 0;
         grid-area: card-content;
         z-index: 1;
