--- a/questgames/src/assets/scss/index.scss
+++ b/questgames/src/assets/scss/index.scss
@@ -6,3 +6,5 @@
 @import './components/header.scss';
 @import './components/social.scss';
 @import './components/hero.scss';
+@import './components/games-filter.scss';
+
