--- a/questgames/src/assets/scss/index.scss
+++ b/questgames/src/assets/scss/index.scss
@@ -7,4 +7,5 @@
 @import './components/social.scss';
 @import './components/hero.scss';
 @import './components/games-filter.scss';
+@import './components/game-cards.scss';
 
