--- a/questgames/src/assets/scss/landingpage.scss
+++ b/questgames/src/assets/scss/landingpage.scss
@@ -26,7 +26,8 @@
     }
     &__title {
         @extend .general-bottom-margin;
-        font-size: 58px;
+        //font-size: 58px;
+        font-size: 17vw;
         font-weight: 800;
         color: #fff;
         padding-right: 6px;
