--- a/questgames/src/assets/scss/project-commons.scss
+++ b/questgames/src/assets/scss/project-commons.scss
@@ -1,6 +1,7 @@
 @import './colors.scss';
 
 $general-background: $black-100;
+$text-primary: #fff;
 $text-grey: $grey-400;
 $text-dark: $black-100;
 $text-gold: $yellow-100;
